--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
         <!-- Agentverse Image -->
         <div class="mb-8 rounded-lg overflow-hidden border border-solid border-[rgba(100,116,139,0.3)]">
-            <img src="https://codelabs.devsite.corp.google.com/static/agentverse-devopssre/img/agentverse_1920.png" alt="An illustration of the Agentverse showing interconnected nodes and pathways" class="w-full">
+            <img src="img/agentverse.png" alt="An illustration of the Agentverse showing interconnected nodes and pathways" class="w-full">
         </div>
 
 
