--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             <h2 class="text-3xl mb-8 text-center font-bold">Choose Your Class</h2>
             <div id="class-selection" class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Shadowblade -->
-                <div class="class-card" data-class="Shadowblade" data-credit-link="https://goo.gle/bos-credits" data-lab-link="https://codelabs.developers.google.com/agentverse-developer/instructions#0">
+                <div class="class-card" data-class="Shadowblade" data-credit-link="https://goo.gle/nyc-credits" data-lab-link="https://codelabs.developers.google.com/agentverse-developer/instructions#0">
                     <img src="img/developer.png" alt="Shadowblade Class placeholder" class="w-full h-auto block">
                     <div class="p-6">
                         <h3 class="text-xl mb-3 font-bold class-title">The Shadowblade (Developer)</h3>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <!-- Summoner -->
-                <div class="class-card" data-class="Summoner" data-credit-link="https://goo.gle/bos-credits" data-lab-link="https://codelabs.developers.google.com/agentverse-architect/instructions#0">
+                <div class="class-card" data-class="Summoner" data-credit-link="https://goo.gle/nyc-credits" data-lab-link="https://codelabs.developers.google.com/agentverse-architect/instructions#0">
                     <img src="img/architect.png" alt="Summoner Class placeholder" class="w-full h-auto block">
                     <div class="p-6">
                         <h3 class="text-xl mb-3 font-bold class-title">The Summoner (Architect)</h3>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <!-- Scholar -->
-                <div class="class-card" data-class="Scholar" data-credit-link="https://goo.gle/bos-credits" data-lab-link="https://codelabs.developers.google.com/agentverse-dataengineer/instructions#0">
+                <div class="class-card" data-class="Scholar" data-credit-link="https://goo.gle/nyc-credits" data-lab-link="https://codelabs.developers.google.com/agentverse-dataengineer/instructions#0">
                     <img src="img/dataeng.png" alt="Scholar Class placeholder" class="w-full h-auto block">
                     <div class="p-6">
                         <h3 class="text-xl mb-3 font-bold class-title">The Scholar (Data Engineer)</h3>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <!-- Guardian -->
-                <div class="class-card" data-class="Guardian" data-credit-link="https://goo.gle/bos-gpu-credits" data-lab-link="https://codelabs.developers.google.com/agentverse-devopssre/instructions#0">
+                <div class="class-card" data-class="Guardian" data-credit-link="https://goo.gle/nyc-gpu-credits" data-lab-link="https://codelabs.developers.google.com/agentverse-devopssre/instructions#0">
                     <img src="img/devopssre.png" alt="Guardian Class placeholder" class="w-full h-auto block">
                     <div class="p-6">
                         <h3 class="text-xl mb-3 font-bold class-title">The Guardian (DevOps / SRE)</h3>
